--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <meta
       name="description"
       content="The photographic portfolio of Patrick Gillespie. Photos, image toggles, and more... well not really, mostly just the first two."
-    />
+    /> 
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,6 +25,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+<!--
+    <meta property="og:title" content="__OG_TITLE__" />
+    <meta property="og:description" content="__OG_DESCRIPTION__" />
+    <meta property="og:image" content="__OG_IMAGE__" />
+
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:site" content="@patorjk" />
+    <meta property="twitter:title" content="__OG_TITLE__" />
+    <meta property="twitter:description" content="__OG_DESCRIPTION__" />
+    <meta property="twitter:image" content="https://patrickgillespie.com/__OG_IMAGE__" />
+-->
 
     <style>
       html, body, .appRoot {
