--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,18 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="The photographic portfolio of Patrick Gillespie. Photos, image toggles, and more... well not really, mostly just the first two."
-    /> 
+      content="__DESCRIPTION__"
+    />
+
+    <meta property="og:title" content="__OG_TITLE__" />
+    <meta property="og:description" content="__OG_DESCRIPTION__" />
+    <meta property="og:image" content="__OG_IMAGE__" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@patorjk" />
+    <meta name="twitter:title" content="__OG_TITLE__" />
+    <meta name="twitter:description" content="__OG_DESCRIPTION__" />
+    <meta name="twitter:image" content="https://patrickgillespie.com/__OG_IMAGE__" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -44,7 +54,7 @@
       }
     </style>
 
-    <title>Patrick Gillespie Photography</title>
+    <title>__TITLE__</title>
   </head>
   <body>
     <noscript>
