--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
 
     <meta property="og:title" content="__OG_TITLE__" />
     <meta property="og:description" content="__OG_DESCRIPTION__" />
-    <meta property="og:image" content="__OG_IMAGE__" />
+    <meta property="og:image" content="https://patrickgillespie.com__OG_IMAGE__" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@patorjk" />
     <meta name="twitter:title" content="__OG_TITLE__" />
     <meta name="twitter:description" content="__OG_DESCRIPTION__" />
-    <meta name="twitter:image" content="https://patrickgillespie.com/__OG_IMAGE__" />
+    <meta name="twitter:image" content="https://patrickgillespie.com__OG_IMAGE__" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
