--- a/php/index.html
+++ b/php/index.html
@@ -15,7 +15,7 @@
 
     <meta property="og:title" content="__OG_TITLE__" />
     <meta property="og:description" content="__OG_DESCRIPTION__" />
-    <meta property="og:image" content="__OG_IMAGE__" />
+    <meta property="og:image" content="https://patrickgillespie__OG_IMAGE__" />
 
     <style>
       html, body, .appRoot {
