--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,23 @@
     <link rel="icon" href="%PUBLIC_URL%/camera.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="__DESCRIPTION__"
-    />
+    <meta name="description" content="__DESCRIPTION__" />
 
     <meta property="og:title" content="__OG_TITLE__" />
     <meta property="og:description" content="__OG_DESCRIPTION__" />
-    <meta property="og:image" content="https://patrickgillespie.com__OG_IMAGE__" />
+    <meta
+      property="og:image"
+      content="https://patrickgillespie.com__OG_IMAGE__"
+    />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@patorjk" />
     <meta name="twitter:title" content="__OG_TITLE__" />
     <meta name="twitter:description" content="__OG_DESCRIPTION__" />
-    <meta name="twitter:image" content="https://patrickgillespie.com__OG_IMAGE__" />
+    <meta
+      name="twitter:image"
+      content="https://patrickgillespie.com__OG_IMAGE__"
+    />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -36,7 +39,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-<!--
+    <!--
     <meta property="og:title" content="__OG_TITLE__" />
     <meta property="og:description" content="__OG_DESCRIPTION__" />
     <meta property="og:image" content="__OG_IMAGE__" />
@@ -49,7 +52,9 @@
 -->
 
     <style>
-      html, body, .appRoot {
+      html,
+      body,
+      .appRoot {
         height: 100%;
       }
     </style>
@@ -60,16 +65,35 @@
     <noscript>
       <h1>Patrick Gillespie's Photography</h1>
       <p>
-        The site's much better with JavaScript, but you can find a few of my photos below.
+        The site's much better with JavaScript, but you can find a few of my
+        photos below.
       </p>
       <p>
-        For more, be sure to check out Flickr page: <a href="https://www.flickr.com/people/40423570@N07/">https://www.flickr.com/people/40423570@N07/</a>.
+        For more, be sure to check out Flickr page:
+        <a href="https://www.flickr.com/people/40423570@N07/"
+          >https://www.flickr.com/people/40423570@N07/</a
+        >.
       </p>
-      <img src="%PUBLIC_URL%/no_script_photos/pagoda.jpg" style="max-width:100%" />
-      <img src="%PUBLIC_URL%/no_script_photos/domino_sugar.jpg" style="max-width:100%"  />
-      <img src="%PUBLIC_URL%/no_script_photos/nightmare.jpg" style="max-width:100%"  />
-      <img src="%PUBLIC_URL%/no_script_photos/fells.jpg" style="max-width:100%"  />
-      <img src="%PUBLIC_URL%/no_script_photos/thunderbirds.jpg" style="max-width:100%"  />
+      <img
+        src="%PUBLIC_URL%/no_script_photos/pagoda.jpg"
+        style="max-width: 100%"
+      />
+      <img
+        src="%PUBLIC_URL%/no_script_photos/domino_sugar.jpg"
+        style="max-width: 100%"
+      />
+      <img
+        src="%PUBLIC_URL%/no_script_photos/nightmare.jpg"
+        style="max-width: 100%"
+      />
+      <img
+        src="%PUBLIC_URL%/no_script_photos/fells.jpg"
+        style="max-width: 100%"
+      />
+      <img
+        src="%PUBLIC_URL%/no_script_photos/thunderbirds.jpg"
+        style="max-width: 100%"
+      />
     </noscript>
     <div id="root" class="appRoot"></div>
     <!--
